feat: merchant api improvements
